# game-of-life

./: Cargo.toml  README.md  app.js  index.html  style.css
.github/workflows/: build.yml
assets/: game_of_life_bg-0c5f0a1a.wasm  game_of_life_bg-7420bb07.wasm  game_of_life_bg-feda1844.wasm  index-17c532b8.js  index-2f4beb8e.js  index-9727feb9.js  index-9cd533a3.js  index-f826380b.css
src/: lib.rs  universe.rs  utils.rs
tests/: web.rs
www/: index.html  package-lock.json  package.json  vite.config.ts
www/src/: main.ts  style.css
